<resources>
    <string name="app_name">tde 3</string>
    <string name="_0_consultas_cadastradas">0 consultas cadastradas</string>
    <string name="_1_paciente_cadastrados">1 paciente cadastrados</string>
    <string name="lista_de_consultas">Lista de consultas</string>
    <string name="consultas_agendadas">Consultas agendadas</string>
    <string name="consultas_realizadas">Consultas realizadas</string>
    <string name="total_de_pacientes">Total de pacientes</string>
    <string name="_0_consultas_agendadas">0_consultas_agendadas</string>
    <string name="bem_vindo_a_m_dico">Bem-Vindo(a), Médico</string>
    <string name="sem_consultas_agendadas">Sem consultas agendadas:</string>
    <string name="n_o_h_novas_atividades">Não há novas atividades</string>
    <string name="bem_vindo_vitta_clinic">Bem-Vindo, Vitta Clinic</string>
    <string name="total_de_administradores">Total de Administradores</string>
    <string name="total_de_paciente">Total de Pacientes</string>
    <string name="total_de_consulta">Total de Consulta</string>
    <string name="_1_administrador_agendadas">1 administrador agendadas</string>
    <string name="_1_paciente_cadastrado">1 Paciente Cadastrados</string>
    <string name="_1_consulta_cadastradas">1 Consulta Cadastradas</string>
    <string name="acesso_r_pido">acesso_rápido</string>
    <string name="administradores">Administradores</string>
    <string name="m_dicos">Médicos</string>
    <string name="pacientes">pacientes</string>
    <string name="resultado_das_atividades_recentes">Resultado das Atividades Recentes</string>
    <string name="nota">NOTA:</string>
    <string name="n_o_h_novas_atividades_para_mostrar">Não há novas atividades para mostrar</string>
    <string name="entre_na_conta">Entre na conta</string>
    <string name="m_dico">Médico</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="esqueceu_sua_senha">Esqueceu sua senha?</string>
    <string name="entrar_em_contato_com_a_cl_nica">Entrar em contato com a clínica.</string>
    <string name="cadastre_sua_cl_nica">Cadastre sua clínica</string>
    <string name="nome_cl_nica">Nome clínica</string>
    <string name="cnpj">CNPJ</string>
    <string name="email">E-mail</string>
    <string name="se_nha">Senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="j_tem_uma_conta">Já tem uma conta?</string>
    <string name="login">Login</string>
    <string name="mordenize_a_gest_o_da_sua_clinica">MORDENIZE A GESTÃO DA SUA CLINICA</string>
    <string name="simplifique_etapas_para_cuidar_melhor_do_seu_neg_cio">Simplifique etapas para cuidar melhor do seu negócio</string>
    <string name="cadastre_se_gr_tis">CADASTRE-SE GRÁTIS</string>
</resources>