<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView43"
        android:layout_width="296dp"
        android:layout_height="71dp"
        android:background="#F2F2F2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="407dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView42"
        android:layout_width="296dp"
        android:layout_height="71dp"
        android:background="#F2F2F2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="303dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_consultas_cadastradas"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/textView42"
        app:layout_constraintStart_toStartOf="@+id/textView42"
        tools:layout_editor_absoluteY="345dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView49"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1_paciente_cadastrados"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/textView43"
        app:layout_constraintStart_toStartOf="@+id/textView43"
        tools:layout_editor_absoluteY="450dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lista_de_consultas"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="496dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView41"
        android:layout_width="296dp"
        android:layout_height="71dp"
        android:background="#F2F2F2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="196dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consultas_agendadas"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView41"
        app:layout_constraintStart_toStartOf="@+id/textView41"
        tools:layout_editor_absoluteY="203dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consultas_realizadas"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView42"
        app:layout_constraintStart_toStartOf="@+id/textView42"
        tools:layout_editor_absoluteY="311dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView46"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_de_pacientes"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView43"
        app:layout_constraintStart_toStartOf="@+id/textView43"
        tools:layout_editor_absoluteY="416dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_consultas_agendadas"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/textView41"
        app:layout_constraintStart_toStartOf="@+id/textView41"
        tools:layout_editor_absoluteY="234dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bem_vindo_a_m_dico"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.213"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="112dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="417dp"
        android:layout_height="95dp"
        android:background="#EC6C1E"
        android:backgroundTint="#EC6C1E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="-2dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView52"
        android:layout_width="355dp"
        android:layout_height="47dp"
        android:layout_marginTop="532dp"
        android:background="#EC6C1E"
        android:backgroundTint="#EC6C1E"
        app:layout_constraintTop_toTopOf="@+id/textView19"
        tools:layout_editor_absoluteX="23dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView54"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sem_consultas_agendadas"
        android:textColor="#E9DEDE"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView52"
        app:layout_constraintTop_toTopOf="@+id/textView52"
        tools:layout_editor_absoluteX="33dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView53"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/n_o_h_novas_atividades"
        android:textColor="#EDE8E8"
        app:layout_constraintBottom_toBottomOf="@+id/textView52"
        app:layout_constraintTop_toTopOf="@+id/textView52"
        tools:layout_editor_absoluteX="190dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="248dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_branco"
        tools:layout_editor_absoluteX="-68dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="72dp"
        android:layout_height="84dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView19"
        app:layout_constraintTop_toTopOf="@+id/textView19"
        app:srcCompat="@drawable/home"
        tools:layout_editor_absoluteX="343dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>
