<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="55dp"
            android:layout_height="52dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="676dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.016"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/seta_laranja"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="323dp"
            android:layout_height="284dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="444dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo_vitta"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="252dp"
            android:layout_height="309dp"
            android:background="#F2F2F2"
            android:backgroundTint="#F2F2F2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="218dp"
            android:layout_marginBottom="494dp"
            android:text="@string/entre_na_conta"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView12"
            app:layout_constraintStart_toStartOf="@+id/textView12"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="258dp"
            android:layout_marginBottom="454dp"
            android:text="@string/m_dico"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView12"
            app:layout_constraintHorizontal_bias="0.106"
            app:layout_constraintStart_toStartOf="@+id/textView12"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="302dp"
            android:layout_marginBottom="410dp"
            android:text="@string/e_mail"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView12"
            app:layout_constraintHorizontal_bias="0.107"
            app:layout_constraintStart_toStartOf="@+id/textView12"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="330dp"
            android:layout_marginBottom="356dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView12"
            app:layout_constraintStart_toStartOf="@+id/textView12"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/senha"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress5"
            app:layout_constraintEnd_toEndOf="@+id/textView12"
            app:layout_constraintHorizontal_bias="0.103"
            app:layout_constraintStart_toStartOf="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/editTextTextEmailAddress5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="@+id/textView12"
            app:layout_constraintEnd_toEndOf="@+id/textView12"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintStart_toStartOf="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
            app:layout_constraintVertical_bias="0.59"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/button2"
            android:layout_width="131dp"
            android:layout_height="50dp"
            android:layout_marginTop="527dp"
            android:layout_marginBottom="154dp"
            android:backgroundTint="#EC6C1E"
            android:text="@string/entrar"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="603dp"
            android:layout_marginBottom="109dp"
            android:text="@string/esqueceu_sua_senha"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.292"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="622dp"
            android:layout_marginBottom="59dp"
            android:text="@string/entrar_em_contato_com_a_cl_nica"
            android:textColor="#B6B1B1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText,MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>